# imperecta

./: .gitignore  .gitleaks.toml  .snyk  DB_Supabase.md  Imperecta_Architecture.md  Imperecta_Backend.md  Imperecta_Cursor_Project_Description.md  Imperecta_Database.md  Imperecta_Frontend.md  Imperecta_Full_Development_Context.md  Imperecta_Parsing.md  PriceRadar_MVP_Plan.md  README.md  backend_full_audit_report.md  components.json  db-clean.sh  db-export.sh  db-import.sh  dev-start.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  imperecta_context.md  package.json  parsers_audit.md  pnpm-lock.yaml  stop-dev.sh  supabase-schema.sql  tailwind.config.ts  tsconfig.json  wrangler.jsonc
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  alembic.ini  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  security.cfg  tsconfig.json
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/database/: schema.sql
backend/scripts/: debug_local_db.py
backend/src/: config.rs  index.ts  main.rs
backend/tests/: conftest.py  test_a1_analytics_dissolution.py  test_admin_contract.py  test_ai1_ai_analyst_refactor.py  test_ai_contract.py  test_analytics_contract.py  test_auth_contract.py  test_cls1_classifier_module.py  test_core_auth1_module_split.py  test_core_tg1_telegram_module.py  test_core_users1_module_assembly.py  test_d1_dashboard_dissolution.py  test_da1_alerts_digests_dissolution.py  test_dashboard_contract.py  test_health.py  test_ing1_ingestion_module.py  test_market_data_fetch_consolidation.py  test_market_data_module_baseline.py  test_market_data_structure.py  test_market_data_tasks_workers.py  test_marketplace_pool.py  test_markets_contract.py  test_mp1_marketplaces_refactor.py  test_parsing_admin_api.py  test_parsing_admin_service.py  test_pipeline_focus_marketplaces.py  test_pipeline_scoped_marketplaces.py  test_pp1_product_pool_refactor.py  test_reaper.py  (+7 more)
(+827 files in other folders)
