[package]
name = "imperecta-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-full", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "json", "tls-rustls"] }

# Authentication
jsonwebtoken = "9.3"
serde_json = "1.0"

# Encryption
ring = "0.17"
argon2 = "0.5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# API documentation
utoipa = { version = "5.2", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
