[project]
name = "imperecta-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "venv", "__pycache__", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]
markers = [
    "integration: tests that need PostgreSQL and/or real network fetches",
]

[tool.coverage.run]
source = ["app/modules/scraper"]
omit = [
    "**/proxy_manager.py",
]

[tool.coverage.report]
show_missing = true
